# libquat

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Quaternioni.sln  README.md  makefile  quat.h  vcpkg.json
.github/workflows/: ccpp.yml
Quaternioni2d/: Quaternioni2d.vcxproj  Quaternioni2d.vcxproj.filters
Quaternioni2d.vcxproj/: Quaternioni2d.vcxproj
Quaternioni3d/: Quaternioni3d.vcxproj  Quaternioni3d.vcxproj.filters
Quaternioni3d.vcxproj/: Quaternioni3d.vcxproj
Tests/: Tests.vcxproj  Tests.vcxproj.filters
Tests.vcxproj/: Tests.vcxproj
src/: 1-2-rotazioni.cpp  3-inertial2d.cpp  4-inertial3d.cpp  quat.cpp  quat.h  quaternioni.cpp  quaternioni.h
test/: 1-2-rotazioni.cpp  3-inertial2d.cpp  4-inertial3d.cpp
